# test-assignment-hexlet-mentor

./: README.md  dockerfile  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
fizzbuzz/: game_starter.py  logic.py
fizzbuzz/scripts/: game.py
tests/: test_fizzbuzz_calculator.py  test_game_starter.py  test_logic.py
