[tool.poetry]
name = "fizzbuzz"
version = "1.0.0"
description = "The CLI utility on startup asks the user for a number and give the answer - Fizz, Buzz, FizzBuzz."
authors = ["emp7yhead <artyomkropp@gmail.com>"]
repository = "https://github.com/emp7yhead/test-assignment-hexlet-mentor"
packages = [
	{ include = "fizzbuzz" },
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python",
	"Topic :: Games/Entertainment"
]

[tool.poetry.scripts]
fizz_buzz = "fizzbuzz.scripts.game:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
